--- a/sass/config/variables.sass
+++ b/sass/config/variables.sass
@@ -4,6 +4,8 @@ $font-brand: 'Montserrat', sans-serif
 $font-header: 'Rubik', sans-serif
 $font-body: 'Open Sans', sans-serif
 $font-serif: 'Lora', sans-serif
+$font-script: "Sriracha", cursive
+
 
 //colors
 
