--- a/sass/common/global.sass
+++ b/sass/common/global.sass
@@ -71,9 +71,11 @@ a
 	text-align: center
 	span
 		text-decoration: underline
+		//border-bottom: solid $color-white 1px
 	&:hover
 		span
 			color: darken($color-brand, 50%)
+
 	p
 		margin-bottom: 0
 		padding: 0
