--- a/sass/config/variables.sass
+++ b/sass/config/variables.sass
@@ -13,6 +13,7 @@ $color-cal: #1f1f1f
 
 $color-light-gray: #fafbfc
 $color-light-gray: #f3f3f3
+$color-medium-gray: #adb5bd
 $color-brand: #ff6e42
 $color-black: #1e2129
 $color-dark-gray: #424242
