--- a/docs/styles/home.css
+++ b/docs/styles/home.css
@@ -11859,6 +11859,10 @@ textarea.form-control-lg {
   color: #ff6e42;
 }
 
+.color-brand-background {
+  background-color: #ff6e42;
+}
+
 html {
   font-size: 62.5%;
 }
