--- a/sass/common/global.sass
+++ b/sass/common/global.sass
@@ -44,6 +44,18 @@ a
 	font-size: 1.8rem
 
 
+.section-tag
+	background-color: $color-brand-light
+	color: $color-brand
+	border-radius: 1rem
+	padding: 0.5rem 2rem
+	display: inline-block
+	margin-bottom: 3rem
+	font-weight: 700
+	&.light
+		background-color: rgba(255,255,255,0.2)
+		color: $color-white
+
 .responsive-video
 	position: relative
 	padding-bottom: 56.25%
@@ -63,7 +75,7 @@ a
 		border: 0
 
 .announcement-bar
-	background-color: $color-brand
+	background-color: $color-blue
 	color: $color-white
 	position: relative
 	padding-top: 0.5rem
