--- a/sass/home.sass
+++ b/sass/home.sass
@@ -95,7 +95,7 @@ header
 			justify-content: center
 			font-family: $font-header
 			font-weight: 600
-			text-transform: uppercase
+			text-transform: capitalize
 			letter-spacing: 1px
 			@include media-breakpoint-up(lg)
 				justify-content: flex-end
