--- a/sass/sections/hero.sass
+++ b/sass/sections/hero.sass
@@ -2,37 +2,23 @@ section.hero
 	display: flex
 	justify-content: center
 	align-items: center
-	//padding: 6rem 0 0 0
-	//min-height: 60rem
 	overflow: hidden
 	position: relative
-	
-	@include media-breakpoint-up(lg)
-		//padding: 10rem 0 0 0
+
 	.section-content
 		display: flex
 		flex-direction: column		
 		position: relative
 		
 		@include media-breakpoint-up(lg)
-			flex-direction: row
-			height: 70rem
 			justify-content: space-between
 			align-items: center
 		.message
 			width: 100%
-			width: 100%
 			padding: 3rem
 			z-index: 99
-			text-align: left
-			@include media-breakpoint-up(lg)
-				text-align: left
+			text-align: center
 
-
-			@include media-breakpoint-up(lg)
-				width: 100%
-				position: relative
-				top: -8rem
 
 			h1
 				font-size: 3rem
@@ -52,7 +38,6 @@ section.hero
 
 				@include media-breakpoint-up(lg)
 					font-size: 5.5rem
-					text-align: left
 					br
 						display: block
 			h2
@@ -62,11 +47,6 @@ section.hero
 				strong
 					font-weight: 600
 
-				@include media-breakpoint-up(md)
-					text-align: left
-				@include media-breakpoint-up(lg)
-					text-align: left
-					max-width: 500px
 			h3
 				color: $color-brand
 				text-transform: uppercase
@@ -74,22 +54,25 @@ section.hero
 				font-family: $font-brand
 				font-weight: 800
 				font-size: 2.6rem
+
 		.featured-image
 			width: 100%
 			height: 100%
-			right: 0
+			.featured-image-holder
+				box-shadow: 0 0 27px -15px $color-dark-gray
+				border-radius: 1rem
+				overflow: hidden
 
-			@include media-breakpoint-up(lg)
-				width: 60%
-				position: absolute
-			img
-				width: 100%
-				height: auto
-				@include media-breakpoint-up(lg)
-					width: 120%
-					position: absolute
-					top: -0rem
-					right: -20rem
+				img
+					width: 100%
+					height: auto
+			h2
+				font-size: 1.5rem
+				text-align: center
+				padding: 2rem 0
+				color: lighten($color-dark-gray, 30%)
+
+
 
 
 section.hero.cloud-hero
@@ -144,6 +127,7 @@ section.hero.cloud-hero
 				font-family: $font-brand
 				font-weight: 800
 				font-size: 2.6rem
+
 	.featured-image
 		width: 100%
 		height: 100%
