--- a/sass/sections/index.sass
+++ b/sass/sections/index.sass
@@ -1,5 +1,8 @@
 @import 'sections'
 @import 'hero'
+@import 'getting-started'
+@import 'benefits'
+@import 'roles'
 @import 'concept-highlights'
 @import 'cta'
 @import 'features'
